[package]
name = "parsing_rs"
version = "0.4.1"
edition = "2021"
repository = "https://gitee.com/BoleanTech/parsing-rs"

[workspace]
exclude = ["benches"]

[lib]
crate-type = ["staticlib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nom = "7"
serde = {version = "1.0", features = ["derive"]} # https://serde.rs/
serde_json = "1.0"
libc = "0.2"

[dev-dependencies]
# required by examples and benchmark
pcap-parser = "0.11.1"
colored = "2"
walkdir = "2.3.2"

[build-dependencies]
# required by ffi
cbindgen = "0.20.0"

[[example]]
name = "parsing_pcap"
path = "examples/parsing_pcap.rs"

[[example]]
name = "parsing_rules"
path = "examples/parsing_rules.rs"