[package]
name = "parsing_rs"
version = "0.5.0"
edition = "2021"
repository = "https://gitee.com/BoleanTech/parsing-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
exclude = ["benches"]
members = ["crates/*"]

[dependencies]
parsing_icsrule = { path = "crates/parsing_icsrule", version = "0.5.0" }
parsing_parser = { path = "crates/parsing_parser", version = "0.5.0" }

[dev-dependencies]
# required by examples and benchmark
pcap-parser = "0.11.1"
colored = "2"
walkdir = "2.3.2"

[[example]]
name = "parsing_pcap"
path = "examples/parsing_pcap.rs"

[[example]]
name = "parsing_rules"
path = "examples/parsing_rules.rs"