[package]
name = "parsing_rs"
version = "0.5.0"
edition = "2021"
repository = "https://gitee.com/BoleanTech/parsing-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
exclude = ["benches"]
members = [
    "crates/adapter_clang",
    "crates/parsing_parser",
    "crates/parsing_rule",
    "crates/parsing_icsrule",
    "crates/parsing_suricata",
]

[dependencies]
parsing_parser = { path = "crates/parsing_parser", version = "0.5.0" }
parsing_rule = { path = "crates/parsing_rule", version = "0.1.0" }
parsing_icsrule = { path = "crates/parsing_icsrule", version = "0.5.1" }
parsing_suricata = { path = "crates/parsing_suricata", version = "0.1.0" }

[dev-dependencies]
# required by examples and benchmark
pcap-parser = "0.11.1"
colored = "2"
walkdir = "2.3.2"
tracing = "0.1"
tracing-subscriber = "0.2"

[[example]]
# RUST_LOG=DEBUG cargo run --example parsing_pcap
name = "parsing_pcap"
path = "examples/parsing_pcap.rs"
