[package]
name = "adapter_clang"
version = "0.1.0"
edition = "2021"

# ref: https://doc.rust-lang.org/reference/linkage.html
[lib]
name = "parser_rs"
crate-type = ["rlib", "staticlib", "cdylib"]

[build-dependencies]
# required by ffi
cbindgen = "0.20.0"

[dependencies]
# parsing-rs
# parsing_rs = { path = "../../" }
parsing_rule = { path = "../parsing_rule" }
parsing_parser = { path = "../parsing_parser" }
parsing_icsrule = { path = "../parsing_icsrule" }
# required by ffi
libc = "0.2"
# log
tracing = "0.1"
tracing-subscriber = "0.2"