[package]
name = "parsing_icsrule"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parsing-rs
parsing_parser = { path = "../parsing_parser" }
parsing_rule = { path = "../parsing_rule" }
# other
serde = {version = "1.0", features = ["derive"]} # https://serde.rs/
serde_json = "1.0"