[package]
name = "parsing_parser"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7"
serde = {version = "1.0", features = ["derive"]} # https://serde.rs/
serde_json = "1.0"
tracing = "0.1"
httparse = "*"

[dev-dependencies]
pcap-parser = "0.11.1"
tracing-subscriber = "0.2"