[package]
name = "parsing_rule"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parsing_parser = { path = "../parsing_parser" }
# ref: https://doc.rust-lang.org/cargo/reference/features.html#optional-dependencies
serde = { version = "1.0", features = ["derive"], optional = true }
