[package]
name = "parsing_suricata"
version = "0.1.0"
edition = "2021"
authors = ["Fseeeye <liyifan@bolean.com.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parsing-rs
parsing_parser = { path = "../parsing_parser" }
# others
nom = "7"
anyhow = "1.0"
thiserror = "1.0"
ipnet = { version = "2" }
# ref: https://doc.rust-lang.org/cargo/reference/features.html#optional-dependencies
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
# ref: https://doc.rust-lang.org/cargo/reference/features.html#dependency-features
default = ["serde", "ipnet/serde"]