[package]
name = "parsing_suricata"
version = "0.1.0"
edition = "2021"
authors = ["Fseeeye <liyifan@bolean.com.cn>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# parsing-rs
parsing_parser = { path = "../parsing_parser" }
parsing_rule = { path = "../parsing_rule" }
# others
nom = "7" # parser combinator
anyhow = "1.0" # 错误处理
thiserror = "1.0" # 错误定义和处理
ipnet = "2" # ipaddress处理
tracing = "0.1" # 日志处理
# ref: https://doc.rust-lang.org/cargo/reference/features.html#optional-dependencies
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
# ref: https://doc.rust-lang.org/cargo/reference/features.html#dependency-features
default = ["serde", "ipnet/serde"]